Apex/Assignment 2/src/objects/Training_Session__c.object
<CustomObject>
    <fields>
        <fullName>Attendee_Count__c</fullName>
        <description>roll-up summary field to count the number of related Attendee__c records</description>
        <inlineHelpText>roll-up summary field to count the number of related Attendee__c records</inlineHelpText>
        <label>Attendee Count</label>
        <summaryForeignKey>Attendee__c.Training_Session_1__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Average_Ratings__c</fullName>
        <formula>Feedback_Sum__c  /  Attendee_Count__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Average Ratings</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Feedback_Sum__c</fullName>
        <description>Feedback Sum</description>
        <label>Feedback Sum</label>
        <summarizedField>Feedback__c.Selected_Rating__c</summarizedField>
        <summaryForeignKey>Feedback__c.Training_Session_1__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <label>Location</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Record_Type__c</fullName>
        <description>This Field Shows Record Type</description>
        <label>Record Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Session_Date__c</fullName>
        <label>Session Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Session_Mode__c</fullName>
        <label>Session Mode</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Webinar Online</fullName>
                </value>
                <value>
                    <fullName>Webinar Offline</fullName>
                </value>
                <value>
                    <fullName>Workshop Online</fullName>
                </value>
                <value>
                    <fullName>Workshope Offline</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Training Session</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Training Sessions</pluralLabel>
    <recordTypes>
        <fullName>Webinar_RT</fullName>
        <active>true</active>
        <description>This is a record type for webinar</description>
        <label>Webinar RT</label>
    </recordTypes>
    <recordTypes>
        <fullName>Workshop</fullName>
        <active>true</active>
        <label>Workshop</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>VR_Validate_Seesion_Date</fullName>
        <active>true</active>
        <errorConditionFormula>AND(NOT( $Permission.Bypass_Validation ), Session_Date__c &lt; TODAY())</errorConditionFormula>
        <errorDisplayField>Session_Date__c</errorDisplayField>
        <errorMessage>Session Date can be today or in future</errorMessage>
    </validationRules>
</CustomObject>